# iluhaAnime

./: .attuneignore  .attunerc  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  video.md  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: anilist.rs  auth.rs  bencode.rs  ffmpeg.rs  file_index.rs  fs_utils.rs  fswatcher.rs  lib.rs  lobby.rs  main.rs  progress.rs  scanner.rs  scrapers.rs  shaders.rs  stream.rs  thumbnails.rs  tools.rs  torrent.rs  tracks.rs  video.rs
src/components/: search.component.tsx  torrent.component.tsx
src/components/shared/: chips.component.tsx  confirm.component.tsx  downloader.component.tsx  error.component.tsx  file-picker.component.tsx  loader.component.tsx  lobby.component.tsx  modal.component.tsx  nekobt.api.tsx  notification.component.tsx  outlet.component.tsx  player.component.tsx  playlist.component.tsx  progress-bar.component.tsx  progress.component.tsx  rutracker.login.tsx  section.component.tsx  tabs.component.tsx  tool-downloader.component.tsx  tool.component.tsx  updater.component.tsx
src/components/shared/lobby/: playlist.lobby.tsx  users.lobby.tsx
src/components/shared/player/: audio-sync.player.tsx  controls.player.tsx  empty.player.tsx  header.player.tsx  jump.player.tsx  keyboard.player.tsx  offset.player.tsx  settings.player.tsx  skip.player.tsx  subtitles.player.tsx  timeline.player.tsx  track-selector.modal.tsx  tracks.player.tsx
src/components/ui/: button.component.tsx  checkbox.component.tsx  color.component.tsx  image.component.tsx  input.component.tsx  radio.component.tsx  range-dual.component.tsx  range.component.tsx  select.component.tsx
src/config/: anilist.config.ts  filters.config.ts  index.config.ts  keybinds.config.ts  player.config.ts  query.config.ts  scraper.config.ts  search.config.ts  themes.config.ts
src/hooks/: auth.hook.ts  cache.hook.ts  debounce.hook.ts  modal.hook.ts  pagination.hook.ts  tool.hook.ts
src/lib/: anilist.utils.ts  cache.utils.ts  color.utils.ts  fadedMediaPlayback.ts  index.utils.ts  magnet.utils.ts  media.utils.ts  notification.utils.ts  notifications.utils.ts  player.utils.ts  search.logic.ts  storage.test.ts  storage.ts  subtitle-styles.ts  theme.utils.ts  toast.utils.ts  torrent.utils.ts  track-preferences.ts  utils.test.ts  utils.ts
src/lib/__tests__/: notification.utils.test.ts  player.utils.test.ts  search.logic.test.ts  storage.test.ts  torrent.utils.test.ts  utils.test.ts
src/lib/hooks/: useProgressStream.ts
src/routes/: __root.tsx  anilist.route.tsx  connect.route.tsx  player.route.tsx  search.route.tsx  settings.route.tsx  torrent.route.tsx
src/routes/components/: ffmpeg.player.tsx  file.torrent.tsx  nekobt.search.tsx  picker.search.tsx  rutracker.search.tsx
src/routes/components/anilist/: activity.anilist.tsx  auth.anilist.tsx  browse.anilist.tsx  card.component.tsx  characters.anilist.tsx  controls.anilist.tsx  details.anilist.tsx  details.characters.tsx  favourites.anilist.tsx  filters.anilist.tsx  franchise.anilist.tsx  header.anilist.tsx  list.anilist.tsx  metadata.anilist.tsx  node.anilist.tsx  pagination.anilist.tsx  (+3 more)
src/store/: cache.store.ts  category.store.ts  download.store.ts  media.store.ts  notification.store.ts  player.store.ts  playlist.store.ts  search.store.ts  settings.store.ts  theme.store.ts  upscale.store.ts
src/store/__tests__/: download.store.test.ts  notification.store.test.ts  player.store.test.ts
src/types/: anilist.d.ts  color.d.ts  fs.d.ts  index.d.ts  player.d.ts  search.d.ts  settings.d.ts  theme.d.ts  torrent.d.ts
(+33 files in other folders)
