[package]
name = "iluhaAnime"
version = "1.2.1"
description = "Anime Tracker and Plauer"
authors = ["HullPerse"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iluhaanime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }
futures = "0.3"
encoding_rs = "0.8"
scraper = "0.22"
regex-lite = "0.1"
sha1 = "0.10"
hex = "0.4"
librqbit = { version = "8.1", default-features = false, features = ["default-tls"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "net", "sync", "process"] }
zip = "2"
serde_bencode = "0.2"
tauri-plugin-clipboard-manager = "2.3.2"
num_cpus = "1"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = { version = "0.7", features = ["io"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
walkdir = "2.5"
