[package]
name = "iluhaAnime"
version = "2.0.4"
description = "Anime Tracker and Plauer"
authors = ["HullPerse"]
edition = "2021"
license = "MIT"
repository = "https://github.com/HullPerse/iluhaAnime"
readme = "README.md"
keywords = ["anime", "torrent", "player", "tauri"]
categories = ["multimedia::video", "multimedia::player"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iluhaanime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }
futures = "0.3"
encoding_rs = "0.8"
scraper = "0.22"
regex-lite = "0.1"
sha1 = "0.10"
hex = "0.4"
librqbit = { version = "9.0.0-rc.0", default-features = false, features = ["default-tls", "http-api", "prometheus", "watch", "tracing-subscriber-utils", "disable-upload"] }
librqbit-dualstack-sockets = "0.7"
serde_bytes = "0.11"
tracing = "0.1"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "net", "sync", "process"] }
zip = "2"
tar = "0.4"
flate2 = "1"
xz2 = "0.1"
serde_bencode = "0.2"
tauri-plugin-clipboard-manager = "2.3.2"
num_cpus = "1"
walkdir = "2"
rayon = "1"
dashmap = "6"
notify = "8"
tauri-plugin-fs = "2"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple-crate-versions = "allow"
